plugins {
    id 'java-library'
    id 'maven-publish'
    id 'signing'
    id 'com.github.ben-manes.versions' version '0.38.0'
}

ext {
    reactor_bom_version = '2020.0.24'
    jackson_version = '2.14.0'
    caffeine_version = '3.1.1'
    jsr305_version = '3.0.2'

    junit_version = '5.8.2'
    logback_version = '1.3.0-alpha14'

    isJitpack = System.getenv("JITPACK") == "true"
    isSnapshot = version.toString().endsWith("-SNAPSHOT")
}

subprojects {
    apply plugin: 'java-library'
    apply plugin: 'maven-publish'
    apply plugin: 'com.github.ben-manes.versions'

    if (!isJitpack && !isSnapshot) {
        apply plugin: 'signing'
    }

    group = 'com.telegram4j'
    archivesBaseName = "telegram4j-$project.name"

    targetCompatibility = JavaVersion.VERSION_17
    sourceCompatibility = JavaVersion.VERSION_17

    repositories {
        mavenLocal()
        mavenCentral()
        if (isJitpack || isSnapshot) {
            maven { url 'https://s01.oss.sonatype.org/content/repositories/snapshots' }
        }
    }

    dependencies {
        api platform("io.projectreactor:reactor-bom:$reactor_bom_version")

        compileOnly "com.google.code.findbugs:jsr305:$jsr305_version"

        testImplementation "ch.qos.logback:logback-classic:$logback_version"
        testImplementation "org.junit.jupiter:junit-jupiter-engine:$junit_version"
    }

    configurations.all {
        resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
    }

    tasks.withType(JavaCompile) {
        options.encoding = "UTF-8"
        options.javaModuleVersion = version
    }

    tasks.withType(Javadoc) {
        source += fileTree("$buildDir/generated/sources/annotationProcessor/java/main/")

        options {
            encoding = "UTF-8"
            addBooleanOption "html5", true
            addStringOption "encoding", "UTF-8"
            // TODO: remove after fixing https://bugs.openjdk.org/browse/JDK-8295850
            addStringOption "Xdoclint:none", "-quiet"
            tags = ["apiNote:a:API Note:",
                    "implSpec:a:Implementation Requirements:",
                    "implNote:a:Implementation Note:"]

            links = [
                    "https://projectreactor.io/docs/core/release/api/",
                    "https://fasterxml.github.io/jackson-databind/javadoc/2.14/",
                    "https://www.reactive-streams.org/reactive-streams-1.0.3-javadoc/",
                    "https://netty.io/4.1/api/"
            ]
        }
    }

    test {
        useJUnitPlatform()
    }

    java {
        withJavadocJar()
        withSourcesJar()

        modularity.inferModulePath = true
    }

    publishing {
        publications {
            mavenJava(MavenPublication) {
                from components.java
                artifactId archivesBaseName

                versionMapping {
                    usage('java-api') {
                        fromResolutionOf('runtimeClasspath')
                    }
                    usage('java-runtime') {
                        fromResolutionResult()
                    }
                }

                pom {
                    afterEvaluate {
                        name = pomName
                        description = project.description
                    }

                    url = 'https://github.com/Telegram4J/Telegram4J'
                    inceptionYear = '2021'

                    developers {
                        developer {
                            name = 'The Telegram4J'
                        }
                    }

                    licenses {
                        license {
                            name = 'GPL-3.0'
                            url = 'https://github.com/Telegram4J/Telegram4J/LICENSE'
                            distribution = 'repo'
                        }
                    }

                    scm {
                        url = 'https://github.com/Telegram4J/Telegram4J'
                        connection = 'scm:git:git://github.com/Telegram4J/Telegram4J.git'
                        developerConnection = 'scm:git:ssh://git@github.com:Telegram4J/Telegram4J.git'
                    }
                }
            }
        }


        if (!isJitpack) {
            repositories {
                maven {
                    if (isSnapshot) {
                        url 'https://s01.oss.sonatype.org/content/repositories/snapshots'
                    } else {
                        url 'https://s01.oss.sonatype.org/service/local/staging/deploy/maven2'
                    }

                    def sonatypeUsername = findProperty('sonatypeUsername')
                    def sonatypePassword = findProperty('sonatypePassword')
                    if (sonatypeUsername != null && sonatypePassword != null) {
                        credentials {
                            username sonatypeUsername
                            password sonatypePassword
                        }
                    }
                }
            }
        }
    }

    if (!isJitpack && !isSnapshot) {
        signing {
            def signingKey = findProperty('signingKey')
            def signingPassword = findProperty('signingPassword')
            if (signingKey != null && signingPassword != null) {
                useInMemoryPgpKeys(signingKey, signingPassword)
            }
            sign publishing.publications.mavenJava
        }
    }
}
